--- a/deployments/test-1.deploy.yaml
+++ b/deployments/test-1.deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: test-1
-    test: 1
+    test: "1"
   name: test-1
   namespace: test-1
 spec:
