--- a/deployments/test-2.deploy.yaml
+++ b/deployments/test-2.deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: test-2
-    test: 1
+    test: "1"
   name: test-2
   namespace: test-2
 spec:
