--- a/deployments/test-3.deploy.yaml
+++ b/deployments/test-3.deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: test-3
-    test: 1
+    test: "1"
   name: test-3
   namespace: test-3
 spec:
